--- a/app/views/dashboard/ventas.html.erb
+++ b/app/views/dashboard/ventas.html.erb
@@ -36,7 +36,7 @@ function drawBackgroundColor() {
     <div id="chart_div" style="width: 700px; height: 300px;"></div>
     <h1>Buscar en un día específico</h1>
 
-    <form accept-charset="UTF-8" action="http://localhost:3000/dashboard/trx" method="get">
+    <form accept-charset="UTF-8" action="http://integra2.ing.puc.cl/dashboard/trx" method="get">
       <label for="trx">Transacciones por dia</label>
       <select name="dia" id="dia">
         <option value="1">1</option>
