--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,44 +6,96 @@
 </br>
 
 
+
 <div class="row">
-  <div class="col-md-8">
-    <form class="form-horizontal" role="form" action="MAILTO:someone@example.com" method="POST" enctype="text/plain">
-    	<div class="form-group">
-    		<label for="name" class="col-sm-2 control-label">Nombre</label>
-    		<div class="col-sm-10">
-    			<input type="text" class="form-control" id="name" name="name" placeholder="Nombre completo" value="">
-    		</div>
-    	</div>
-    	<div class="form-group">
-    		<label for="email" class="col-sm-2 control-label">Email</label>
-    		<div class="col-sm-10">
-    			<input type="email" class="form-control" id="email" name="email" placeholder="example@domain.com" value="">
-    		</div>
-    	</div>
-    	<div class="form-group">
-    		<label for="message" class="col-sm-2 control-label">Mensaje</label>
-    		<div class="col-sm-10">
-    			<textarea class="form-control" rows="4" name="message"></textarea>
-    		</div>
-    	</div>
-    	<div class="form-group">
-    		<div class="col-sm-10 col-sm-offset-2">
-    			<input id="submit" name="submit" type="submit" value="Enviar" class="btn btn-primary">
-    		</div>
-    	</div>
-    	<div class="form-group">
-    		<div class="col-sm-10 col-sm-offset-2">
-    			<! Will be used to display an alert to the user>
-    		</div>
-    	</div>
-    </form>
 
+<div class="col-md-12">
+
+
+  <h3 class="text-center"> ¡Comparte en nuestra pagina de Facebook y Twitter tu producto favorito!</h3>
+  <!-- <h4 class="text-center"> ¡No dudes en escribirnos! </h4> -->
+  <p class="text-center">  Comparte con nuestos miles de seguidores tu producto favorito, cuéntales por qué es tu favorito! </p>
+
+  <div class="container text-center">
+    <!-- <h3>Productores de</h3><br> -->
+    <div class="row">
+      <div class="col-sm-2">
+        <img src="/images/products/lino.png" class="img-responsive" style="width:100%" alt="Image">
+        <h4>Lino</h4>
+      </div>
+      <div class="col-sm-2">
+        <img src="/images/products/avena.png" class="img-responsive" style="width:100%" alt="Image">
+        <h4>Cereal de Avena</h4>
+      </div>
+      <div class="col-sm-2">
+        <img src="/images/products/huevos.png" class="img-responsive" style="width:100%" alt="Image">
+        <h4>Huevos</h4>
+      </div>
+      <div class="col-sm-2">
+        <img src="/images/products/cuero.png" class="img-responsive" style="width:95%" alt="Image">
+        <h4>Cuero</h4>
+      </div>
+      <div class="col-sm-2">
+        <img src="/images/products/algodon.png" class="img-responsive" style="width:95%" alt="Image">
+        <h4>Algodón</h4>
+      </div>
+
+
+    </div>
   </div>
-  <div class="col-md-4">
 
-<h4> ¡No dudes en escribirnos! </h4>
-<p> Si tienes alguna duda o deseas dejarnos un reclamo o sugerencia escríbenos, nuestro equipo estará feliz de ayudarte. </p>
+<form accept-charset="UTF-8" action="http://integra2.ing.puc.cl/post_facebook" method="get">
+  <!-- <label for="trx">Transacciones por dia</label> -->
 
+
+  <div class="form-group">
+    <label for="name" class="col-sm-2 control-label">Nombre</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="name" name="name" placeholder="Nombre" value="">
+    </div>
   </div>
+</br>
+
+  <div class="form-group">
+    <label for="favorite" class="col-sm-2 control-label">Producto favorito</label>
+    <div class="col-sm-10">
+    <select class="form-control" name="productTitle" id="productTitle">
+      <option value="Huevo">Huevo</option>
+      <option value="Lino">Lino</option>
+      <option value="Avena">Avena</option>
+      <option value="Cuero">Cuero</option>
+      <option value="Algodon">Algodon</option>
+    </select>
+  </div>
+  </div>
+
+</br>
+
+  <div class="form-group">
+    <label for="message" class="col-sm-2 control-label">Mensaje</label>
+    <div class="col-sm-10">
+      <textarea class="form-control" rows="4" name="message" placeholder="Comparte con todos por qué te gusta este producto"></textarea>
+    </div>
+  </div>
+</br>
+
+  <div class="form-group">
+    <div class="col-sm-10 col-sm-offset-2">
+      <input id="submit" name="post_facebook" type="submit" value="Compartir" class="btn btn-primary"/>
+    </div>
+  </div>
+
+</br>
+
+
+  <div class="form-group">
+    <div class="col-sm-10 col-sm-offset-2">
+      <! Will be used to display an alert to the user>
+    </div>
+  </div>
+</form>
+</div>
+
+
+<h2>
 </div>
