compartir en redes sociales 2

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -44,7 +44,7 @@
 
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/contact">Contáctanos</a></li>
+        <li><a href="/contact">Comparte en redes sociales</a></li>
         <li><a href="https://www.facebook.com/integra2Ti/"> <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> </a></li>
         <li><a href="https://twitter.com/Integra2_TI"> <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> </a></li>
 
